# Qalam-IDE

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LANGUAGE.md  README.md  build-qalam-windows.cmd  deployment.md
.github/workflows/: build.yml
Documents/: ما الجديد.md
documents/: ICON_RESOURCES.md  INTERNALS.md  LANGUAGE.md  ROADMAP.md  TAKWEEN_INTEGRATION.md  USER_GUIDE.md  all-ide-features-pass-2026-06-05.md  all-sprints-foundation-pass-2026-06-05.md  deployment.md  last-vscode-pass-2026-06-05.md  layout-vscode-pass-2026-06-05.md  rtl-layout-correction-2026-06-05.md  rtl-vscode-layout-pass-2026-06-05.md  windows-test-build-fix-2026-06-05.md  ما الجديد.md
qalam/: CMakeLists.txt  Constants.h  Qalam.cpp  Qalam.h  Qalam.pro  main.cpp  resources.qrc
qalam/resources/: Qalam.rc  baa-language.json
qalam/resources/styles/: main.qss
scripts/: bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows.cmd  bootstrap-windows.ps1  build-linux.sh  build-windows.ps1  package-windows.ps1
source/: CMakeLists.txt
source/components/: TCommandPalette.cpp  TCommandPalette.h  TFlatButton.cpp  TFlatButton.h  TSearchPanel.cpp  TSearchPanel.h
source/console/: ProcessWorker.cpp  ProcessWorker.h  TConsole.cpp  TConsole.h
source/core/: CommandRegistry.cpp  CommandRegistry.h
source/debug/: BreakpointModel.cpp  BreakpointModel.h
source/language/: Diagnostic.h  DiagnosticParser.cpp  DiagnosticParser.h  DiagnosticsModel.cpp  DiagnosticsModel.h  TakweenProtocol.cpp  TakweenProtocol.h
source/managers/: BuildManager.cpp  BuildManager.h  FileManager.cpp  FileManager.h  LayoutManager.cpp  LayoutManager.h  SessionManager.cpp  SessionManager.h
source/menubar/: TMenu.cpp  TMenu.h
source/pages/: TWelcomePage.cpp  TWelcomePage.h  TWelcomeWindow.cpp  TWelcomeWindow.h
source/settings/: TSettings.cpp  TSettings.h
source/sidebar/: TExplorerView.cpp  TExplorerView.h  TSearchView.cpp  TSearchView.h
source/texteditor/: AlifLexer.cpp  AlifLexer.h  SyntaxDefinition.cpp  TAutoSave.cpp  TAutoSave.h  TBracketHandler.cpp  TBracketHandler.h  TEditor.cpp  TEditor.h  THighlighter.cpp  TSnippetManager.cpp  TSnippetManager.h
source/texteditor/autocomplete/: AutoComplete.cpp  AutoComplete.h  AutoCompleteUI.cpp  AutoCompleteUI.h
source/texteditor/highlighter/: TLexer.cpp  TLexer.h  TSyntaxDefinition.cpp  TSyntaxDefinition.h  TSyntaxHighlighter.cpp  TSyntaxThemes.h  TToken.h  ThemeManager.h
source/ui/: QalamTheme.cpp  QalamTheme.h  QalamWindow.cpp  QalamWindow.h  TActivityBar.cpp  TActivityBar.h  TBreadcrumb.cpp  TBreadcrumb.h  TPanelArea.cpp  TPanelArea.h  TSidebar.cpp  TSidebar.h  TStatusBar.cpp  TStatusBar.h  TTitleBar.cpp  TTitleBar.h
source/workspace/: WorkspaceIndexer.cpp  WorkspaceIndexer.h
taif/: Taif.cpp  Taif.pro
taif-packages/Linux/config/: config.xml
taif-packages/Windows/config/: config.xml  style.qss
tests/: CMakeLists.txt  TestBuildManager.cpp  TestCommandRegistry.cpp  TestDiagnosticParser.cpp  TestProcessWorker.cpp  TestTakweenProtocol.cpp  TestWorkspaceIndexer.cpp
